<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/menu_frame"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/sidebar_background">

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/sidebar_upper_bar"
        android:gravity="right|center_vertical"
        android:orientation="horizontal" />

    <ListView
        android:id="@+id/menulistView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_bar"
        android:divider="@null" />
</RelativeLayout>