...
    <string name="current_location">Current location</string>

    <!-- LOGIN -->
    <string name="remember_username">Remember Username</string>
    <string name="remember_device">Remember Device?</string>
    <string name="enter_password">Enter Password</string>
    <string name="submit">Submit</string>
    <string name="login">Log in</string>
    <string name="select_username">Select Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="username">Username</string>
    <string name="other_username">+ Other Username</string>
    <string name="other_username_header">Other Username</string>
    <string name="answer">Answer</string>
    <string name="logout">Log out</string>
    <string name="enter_valid_username">Invalid username</string>
    <string name="enter_answer">Invalid answer</string>
    <string name="enter_valid_answer">Invalid answer</string>
    <string name="enter_valid_password">Your password was incorrect.\n\nRemember that your password may have:\n\n&#8226; Capital letters\n&#8226; Numbers \n&#8226; Special characters</string>
    <string name="title_security_question">Question</string>
    <string name="security_question">Security Question Answer</string>
...
    <!-- ACCOUNTS -->
    <string name="account_home">home</string>
    <string name="details">Account details</string>
    <string name="account_list_cca_type">CREDIT CARDS</string>
    <string name="account_list_ida_type">ACCOUNTS</string>
    <string name="account_list_ila_type">LOANS</string>
    <string name="account_list_mla_type">MORTGAGE</string>
    <string name="account_list_cda_type">CDS / IRAS</string>
    <string name="account_list_other_type">OTHER ACCOUNTS</string>
    <string name="account_list_rewards_type">REWARDS</string>
    <string name="account_list_secins_type">INSURANCE &amp; SECURITIES</string>
    <string name="account_list_retplan_type">RETIREMENT PLANS</string>
    <string name="account_list_retplan_new_alert">NEW</string>
...
    <string name="current_statement">Current Statement</string>
    <string name="statement_date_range" formatted="false" tools:ignore="StringFormatInvalid">%s to %s</string>
    <string name="statement_in_process">In process</string>
    <string name="see_more_transactions">See more transactions</string>
    <string name="statement_in_process_caps">IN PROCESS</string>
    <string name="no_statements">No statements available</string>
    <string name="mortgage_disclaimer">The amount and transactions can include a late fee.</string>

    <!-- LANGUAGE SWITCH -->
    <string name="choose_language_restart_needed">Choose language (restart is required)</string>
    <string name="ask_restart">Do you want to restart application now?</string>


...
