<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout style="@style/AccountDetailsPage" >

        <ListView
            android:id="@+id/transaction_list"
            style="@style/AccountDetailsList" />
    </LinearLayout>

</LinearLayout>